# Growth_Plugin

./: CMakeLists.txt  Export.h  README.md  Tensor_discr.h  curvature_eval_discr.h  fv1_conv.h  fv1_conv_impl.h  grid_func_ls_user_data.h  hrfblsm_discr.h  hrfblsm_discr_impl.h  kappla_discr.h  level_set.h  level_set_ave_data.h  level_set_impl.h  level_set_plugin.cpp  level_set_pos.h  level_set_pos_impl.h  level_set_user_data.h  levset_lin_extrapol.h  levset_lin_extrapol_impl.h  levset_simple_extrapol.h  levset_simple_extrapol_impl.h  ls_analytic.h  ls_analytic_impl.h  ls_avoidance_bend_velocity_linker.h  ls_avoidance_bend_velocity_linker.h.bak_before_retractfix_20260708  ls_concentration_dependent_velocity_linker.h  ls_concentration_dependent_velocity_linker.h.bak_20260706_crowdstall  ls_concentration_dependent_velocity_linker.h.bak_before_remove_crowdstall_20260708  ls_concentration_dependent_velocity_linker.h.bak_before_strongretract_20260708  ls_concentration_dependent_velocity_robust_linker.h  ls_concentration_dependent_velocity_robust_linker.h.bak_dir_20260703_125449  ls_cone_selection_linker.h  ls_curvature2d.h  ls_curvature2d_impl.h  ls_darcy_velocity_linker.h  ls_extend_velocity_linker.h  ls_filinker.h  ls_init.h  ls_init_impl.h  (+19 more)
Refinement_LS/: level_set_conforming_refine.h  level_set_marker_tools.h  level_set_projector.h  level_set_projector_tools.h  level_set_swc_tools.h  level_set_tube_builder.h  level_set_tube_projector.h  level_set_tube_tools.h  ls_signed_normal_linker.h  refinement_ls.h
lua_utils/: initial_geometry_checkpoint_20260702.lua  initial_geometry_structure.lua  initial_geometry_structure_3d_20260630.lua  neuro_growth_utils-shahen.lua  neuro_growth_utils.lua  neuro_growth_utils.lua.bak_20260706_eiktol  neuro_growth_utils.lua.bak_20260706_prebasesolver  neuro_growth_utils.lua.bak_20260706_preconvsolver  neuro_growth_utils.lua.bak_20260713_preheat  neuro_growth_utils.lua.bak_robustinterior_20260705  neuro_growth_utils.lua.bak_solverbase_20260703_030127  neuro_growth_utils_calcium_eik_20260706.lua  test_parameters.lua  test_parameters_backup_20260629_234500.lua  (+1 more)
(+129 files in other folders)
